# gengar-server

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: rust.yml
docker/mysql/init/: init.sql  setup_table.sql
src/: handler.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: integration_test.rs
tls/: localhost.crt  localhost.key
