[package]
name = "gengar"
version = "0.1.0"
authors = ["victor-021 <30280491+victor-021@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["mysql"] }
dotenv = "0.15.0"
