[package]
name = "gengar"
version = "0.1.0"
authors = ["victor-021 <30280491+victor-021@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
dotenv = "0.15.0"
tokio = { version = "1.4.0", features = ["full"] }
warp = { version = "0.3.1", features = ["tls"] }
serde = "1.0.125"
serde_json = "1.0"
