[package]
name = "gengar"
version = "0.1.0"
authors = ["victor-021 <30280491+victor-021@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
dotenv = "0.15.0"
tokio = { version = "1.4.0", features = ["full"] }
warp = { version = "0.3.1", features = ["tls"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
mysql_common = "0.26.0"
google-jwt-verify = "0.3.0"
futures = { version = "0.3.14", default-features = false }
blake3 = "0.3.7"
rand = "0.8.3"
pretty_env_logger = "0.4.0"
log = "0.4.14"
bimap = "0.6.1"
openssl = { version = "0.10", features = ["vendored"] }
